--- a/help.Rmd
+++ b/help.Rmd
@@ -18,13 +18,6 @@ summary {
 
 
 
-<details>
-  <summary>**How do I use the database?**</summary>
-</details>
-
-<details>
-  <summary>**Do you have a bibliography of studies used in this database?**</summary>
-</details>
 
 <details>
   <summary>**What do the fields in this database mean?**</summary>
@@ -88,7 +81,7 @@ Yes indicates the gene is listed on the Sanger Institute's Cancer Gene Census. N
 </details>
 
 <details>
-  <summary>**How was the relative rank determined for a specific study?**</summary>
+  <summary>**How is the relative rank value calculated?**</summary>
 
 Relative rank is a letter grade (A, B, C or D) based on the relative rank of the CIS in the study. Rank is generally based on the number of insertions in a given CIS or the p-value assigned to the CIS. The letter grades are as follows: A = Top 10%, B = 11 to 25%, C = 26 to 50% and D = Bottom 50%. For example, if a study identified 100 CISs, the first 10, based on the study's method of ranking, will get an A. CISs identified in screens that did not include insertion numbers or p-values are denoted as Not Ranked.
 
@@ -96,6 +89,9 @@ Relative rank is a letter grade (A, B, C or D) based on the relative rank of the
 
 <details>
   <summary>**Where can I find official NCBI gene identifiers or symbols?**</summary>
+
+See the [NCBI Genome](http://www.ncbi.nlm.nih.gov/genome?db=genome) site and the [NCBI HomoloGene](http://www.ncbi.nlm.nih.gov/homologene) site.
+
 </details>
 
 <details>
@@ -111,6 +107,28 @@ Your browser may respond slowly if you enter more than 500,000 characters into t
 Yes!
 
 Send your information and publication citation to ccgd@umn.edu. We will be happy to add your study to the database.
+
+</details>
+
+<details>
+  <summary>**Do you have a bibliography of studies used in this database?**</summary>
+
+All of the studies referenced through the CCGD can be accessed in a Bibtex format here.
+
+LINK TO CCGD_REFS.BIB DOWNLOAD
+
+In addition, there is a description of the relevant findings for each study on the references page [LINK]
+
+</details>
+
+<details>
+  <summary>**How should I cite this work in publication?**</summary>
+
+Please reference the following paper when citing the CCGD:
+
+* Abbott et al. (2015) doi: https://doi.org/10.1093/nar/gku770
+
+LINK TO CCGD_PAPER.BIB DOWNLOAD
 
 </details>
 
