--- a/contact.Rmd
+++ b/contact.Rmd
@@ -2,7 +2,8 @@
 title: "Contact"
 output:
     html_document:
-        theme: paper
+        css: styles.css
+        theme: readable
 ---
 
 The Candidate Cancer Gene Database is a product of the [Starr Lab](https://sites.google.com/a/umn.edu/starrlab/) at the [University of Minnesota](http://www.umn.edu/). Please contact us at ccgd@umn.edu.
