--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,8 @@ title: "Candidate Cancer Gene Database"
 bibliography: ccgd_paper.bib
 output:
     html_document:
-        theme: paper
+        css: styles.css
+        theme: readable
 ---
 
 The Candidate Cancer Gene Database (CCGD) was developed to disseminate the results of transposon-based forward genetic screens in mice that identify candidate cancer genes. The purpose of the database is to allow cancer researchers to quickly determine whether or not a gene, or list of genes, has been identified as a potential cancer driver in a forward genetic screen in mice. A brief tutorial is available here.
