--- a/search.Rmd
+++ b/search.Rmd
@@ -2,7 +2,8 @@
 title: "Search"
 output:
     html_document:
-        theme: paper
+        css: styles.css
+        theme: readable
 ---
 
 <iframe src="https://ctastad.shinyapps.io/table_app/" width=100% height=800px frameborder="0"></iframe>
