--- a/references.Rmd
+++ b/references.Rmd
@@ -1,31 +1,30 @@
 ---
 title: "References"
-bibliography: ccgd_refs.bib
-csl: apa_6e_custom.csl
+bibliography: refs/ccgd_refs.bib
+nocite: '@*'
+csl: styles/apa_6e_custom.csl
 output:
     html_document:
-        css: styles.css
+        includes:
+            in_header: "styles/favicon.html"
+            after_body: "styles/footer.html"
+        css: styles/styles.css
         theme: readable
 ---
 
-Several external resources were used in the creation of the the CCGD.
+Several external resources were used or referenced in the creation of the the CCGD.
 
 [<img src="https://www.sanger.ac.uk/sites/default/files/ensembl_1.gif" hspace="20" width="200"/>](http://www.ensembl.org/index.html)
 [<img src="https://www.genecards.org/Images/logo_genecards.png" hspace="20" width="200"/>](http://www.genecards.org/)
 [<img src="https://citizensciencegames.com/wp-content/uploads/2017/01/ncbi-logo.png" hspace="20" width="200"/>](http://www.ncbi.nlm.nih.gov/)
 [<img src="https://www.sanger.ac.uk/sites/default/files/logo2.png" hspace="20" width="200"/>](https://cancer.sanger.ac.uk/cosmic/)
+[<img src="img/starrlab_wordmark_long.svg" hspace="20" width="200"/>](https://sites.google.com/a/umn.edu/starrlab/)
 [<img src="https://genome.ucsc.edu/images/GIlogo.png" hspace="20" width="200"/>](http://genome.ucsc.edu/)
-
-
-The Starr Lab at the University of Minnesota
+[<img src="https://d33wubrfki0l68.cloudfront.net/dfb4e8ce24254207347e5e31543f1331c6b9623e/61b77/wp-content/uploads/2015/10/r-packages.png" hspace="20" width="200"/>](https://shiny.rstudio.com/)
 
 # Studies
 
 A list of all publications referenced in the content of this database and a description of their relevant findings are below.
 
 A complete bibliography of the studies present in this resource can be downloaded in bibtex format HEREXXXX.
-
----
-nocite: '@*'
-...
 
