--- a/search.Rmd
+++ b/search.Rmd
@@ -2,9 +2,12 @@
 title: "Search"
 output:
     html_document:
-        css: styles.css
+        includes:
+            in_header: "styles/favicon.html"
+            after_body: "styles/footer.html"
+        css: styles/styles.css
         theme: readable
 ---
 
-<iframe src="https://ctastad.shinyapps.io/table_app/" width=100% height=800px frameborder="0"></iframe>
+<iframe src="https://ctastad.shinyapps.io/table_app/" width=100% height=1200px frameborder="0"></iframe>
 
