transitioned download function from datatables library to shiny; added build_table.sh

--- a/search.Rmd
+++ b/search.Rmd
@@ -9,9 +9,11 @@ output:
         theme: readable
 ---
 
-Download the complete dataset [**here**](http://hst-ccgd-prd-web.oit.umn.edu/table_app/ccgd_export.csv).
+Filtered results can be exported using the `Download` button on the left.
+
+The full table can be accessed by downloading without any filter parameters.
 
 ***
 
-<iframe src="https://ctastad.shinyapps.io/table_app/" width=100% height=1200px frameborder="0"></iframe>
+<iframe src="https://ctastad.shinyapps.io/table_app/" width=100% height=1000px frameborder="0"></iframe>
 
