--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,9 @@ The database is hosted by the Office of Information Technology at UMN. The datab
 
 The most recent gene symbol update was:
 
-<object height = "20" data="table_app/table_build_date.txt"></object>
+<object type="text/html"
+        height: 40px
+        data="table_app/table_build_date.txt"></object>
 
 ***
 
