--- a/index.Rmd
+++ b/index.Rmd
@@ -11,29 +11,43 @@ output:
         theme: readable
 ---
 
-The Candidate Cancer Gene Database (CCGD) was developed to disseminate the results of transposon-based forward genetic screens in mice that identify candidate cancer genes. The purpose of the database is to allow cancer researchers to quickly determine whether or not a gene, or list of genes, has been identified as a potential cancer driver in a forward genetic screen in mice. A brief tutorial is available here.
+The Candidate Cancer Gene Database (CCGD) was developed to disseminate the results of transposon-based forward genetic screens in mice that identify candidate cancer genes. The purpose of the database is to allow cancer researchers to quickly determine whether or not a gene, or list of genes, has been identified as a potential cancer driver in a forward genetic screen in mice.
 
 ***
 
 ### Background
 
-The Candidate Cancer Gene Database is a product of the [Starr Lab](http://www.med.umn.edu/starrlab/) at the [University of Minnesota](http://www.umn.edu/). The Starr Lab is affiliated with the [Center for Genome Engineering](http://www.cge.umn.edu/), the [Masonic Cancer Center](http://www.cancer.umn.edu/), the [Department of Obstetrics, Gynecology and Women's Health](http://www.obgyn.umn.edu/), and the [Department of Genetics, Cell Biology, and Development](http://www.cbs.umn.edu/gcd/). The idea for creating this database originated from Tim Starr, Vincent Keng, and David Largaespada at UMN. Erik Nyre and Ken Abbott did the actual work developing the database, with help from Juan Abrahante. A major site and backend overhaul was conducted in 2019 by Christopher Tastad.
+The work is a product of the [Starr Lab](http://www.med.umn.edu/starrlab/) at the [University of Minnesota](http://www.umn.edu/). The Starr Lab is affiliated with the [Center for Genome Engineering](http://www.cge.umn.edu/), the [Masonic Cancer Center](http://www.cancer.umn.edu/), the [Department of Obstetrics, Gynecology and Women's Health](http://www.obgyn.umn.edu/), and the [Department of Genetics, Cell Biology, and Development](http://www.cbs.umn.edu/gcd/).
 
-The database is hosted by the Office of Information Technology at UMN. The database obtains regular updates from NCBI Gene and NCBI HomoloGene (see Policies and Disclaimers). The database also obtains regular updates from Sanger CGC and Sanger COSMIC. Administrators add information from NCBI PubMed. When necessary, administrators convert genome addresses to the current mouse genome build using UCSC LiftOver.
+##### Contributions
+
+The idea for creating this database originated from Tim Starr, Vincent Keng, and David Largaespada at UMN. Erik Nyre and Ken Abbott developed the original database, with help from Juan Abrahante. A complete website and backend overhaul was conducted by Christopher Tastad in 2019.
+
+* Ken Abbott
+* [Erik Nyre](https://www.dorsey.com/people/n/nyre-erik)
+* [Juan Abrahante](https://research.umn.edu/units/umii/about-us/staff-directory/juan-e-abrahante-phd)
+* [Christopher Tastad](https://github.com/ctastad)
+
+* [Tim Starr](https://med.umn.edu/bio/obgyn-faculty/tim-starr)
+* [David Largaespada](https://www.pediatrics.umn.edu/bio/largaespada-lab-members/david-largaespada)
+* [Vincent Keng](https://www.researchgate.net/profile/Vincent_Keng)
+
+
+The database is hosted by the Office of Information Technology at UMN. The database obtains regular updates from NCBI Gene and NCBI HomoloGene. The database also obtains regular updates from Sanger CGC and Sanger COSMIC. Administrators add information from NCBI PubMed. When necessary, administrators convert genome addresses to the current mouse genome build using UCSC LiftOver.
 
 ***
 
-### Updates
+##### Updates
 
-The most recent gene symbol update was:
+The most recent table build was completed on:
 
 <object type="text/html"
         height=40px
-        data="table_app/build_date.txt"></object>
+        data="build_date.txt"></object>
 
 ***
 
-### Acknowledgements
+##### Citation
 
 Please use the following when citing the CCGD:
 
