--- a/search.Rmd
+++ b/search.Rmd
@@ -11,22 +11,40 @@ output:
 
 ```{r include=F}
 library(dplyr)
+library(kableExtra)
 knitr::opts_chunk$set(echo=FALSE)
 ```
 
-
-#### Field Legend
-
 ```{r}
-read.csv("table_app/legend.csv")
+legend <- read.csv("table_app/legend.csv")
+kable(legend) %>%
+    kable_styling(full_width = F, position = "float_right")
 ```
 
+The table below is the heart of the CCGD. Results can be found by selecting filtering parameters to produce a more narrow scope of results.
+
+The given instructions are intended to be a brief overview for using the table. If further detail is necessary, please visit the [**help**](http://hst-ccgd-prd-web.oit.umn.edu/help.html) page.
+
+#### Filters
+
+There are 4 parameters to filter the dataset by:
+
+* **Species**: this table contains gene homology for several species. The human homolog is always visible.
+* **Study**: Select for results of a specific study in this field.
+* **Cancer**: Narrow results according to the reported disease model in a study.
+* **Genes**: Filter using Entrez gene names. Case sensitivity isn't an issue, and names can be comma or line separated.
+
+#### Visibility
+
+To account for screen dimensions, we don't list every table field by default. Instead, we offer the option to select hidden columns, which is done with the `Column visibility` button.
+
+All columns are included in the download regardless of selection.
 
 #### Download
 
-Filtered results can be exported using the `Download` button on the left.
+Results can be exported using the `Download` button on the left. Any filters applied will be reflected in the csv export.
 
-The full table can be accessed by downloading without any filter parameters.
+The full table can be retrieved by downloading without any filter parameters.
 
 ***
 
