--- a/index.Rmd
+++ b/index.Rmd
@@ -11,13 +11,13 @@ output:
         theme: readable
 ---
 
-The Candidate Cancer Gene Database (CCGD) was developed to disseminate the results of transposon-based forward genetic screens in mice that identify candidate cancer genes. The purpose of the database is to allow cancer researchers to quickly determine whether or not a gene, or list of genes, has been identified as a potential cancer driver in a forward genetic screen in mice.
+The Candidate Cancer Gene Database (CCGD) was developed to make accessible a collated set of results from transposon-based forward cancer genetic screens in mice. The value in doing this is to give investigators the ability to quickly filter through the results of many such screens in an effort to determine the candidacy of a gene for its role in cancer.
 
 ***
 
 ### Background
 
-The work is a product of the [Starr Lab](http://www.med.umn.edu/starrlab/) at the [University of Minnesota](http://www.umn.edu/). The Starr Lab is affiliated with the [Center for Genome Engineering](http://www.cge.umn.edu/), the [Masonic Cancer Center](http://www.cancer.umn.edu/), the [Department of Obstetrics, Gynecology and Women's Health](http://www.obgyn.umn.edu/), and the [Department of Genetics, Cell Biology, and Development](http://www.cbs.umn.edu/gcd/).
+This work is a product of the [Starr Lab](http://www.med.umn.edu/starrlab/) at the [University of Minnesota](http://www.umn.edu/). The Starr Lab is affiliated with the [Center for Genome Engineering](http://www.cge.umn.edu/), the [Masonic Cancer Center](http://www.cancer.umn.edu/), the Department of [OB/GYN](http://www.obgyn.umn.edu/), and the Department of [Genetics, Cell Biology, and Development](http://www.cbs.umn.edu/gcd/).
 
 ##### Contributions
 
@@ -33,7 +33,7 @@ The idea for creating this database originated from Tim Starr, Vincent Keng, and
 * [Vincent Keng](https://www.polyu.edu.hk/abct/en/staff/academic_staff/index.php?id=wvkeng)
 
 
-The database is hosted by the Office of Information Technology at UMN. The database obtains regular updates from NCBI Gene and NCBI HomoloGene. The database also obtains regular updates from Sanger CGC and Sanger COSMIC. Administrators add information from NCBI PubMed. When necessary, administrators convert genome addresses to the current mouse genome build using UCSC LiftOver.
+The database is hosted by the [Office of Information Technology](https://it.umn.edu/office-information-technology) at UMN. The database obtains regular updates from NCBI Gene and NCBI HomoloGene. Additionally, updates are made with data pulled from Sanger CGC and Sanger COSMIC. Administrators add information from NCBI PubMed. When necessary, administrators convert genome addresses to the current mouse genome build using UCSC LiftOver.
 
 ***
 
