--- a/refs/ccgd_rhel7_docs_20191125.Rmd
+++ b/refs/ccgd_rhel7_docs_20191125.Rmd
@@ -6,6 +6,11 @@ output:
         theme: readable
 ---
 
+```{r include = F}
+knitr::opts_chunk$set(eval = F)
+```
+
+
 ssh swadm keys setup
 httpd setup
 script setup
@@ -18,8 +23,8 @@ upload process
 
 ### Directories
 
-* site dir: /var/www/ccgd/_site
-* project dir: /var/www/ccgd
+* site dir: `/var/www/ccgd/_site`
+* project dir: `/var/www/ccgd`
 * backup dir:
 * site address
 
@@ -93,7 +98,56 @@ clone should be done using https
 
 MIT
 
+## RHEL
+
+All changes need to be made under the `swadm` user.
+
+Switching users can be done with the `su` command
+
+```{r}
+sudo su swadm
+```
 
 
+### Apache
+
+make sure `httpd.service` is running
+
+```{r}
+sudo systemctl start httpd.service
+```
 
 
+config file: `/etc/httpd/conf/httpd.conf`
+
+modified elements of the config file are `DocumentRoot` (line 119) and `<Directory>` (line 131)
+
+any changes made to `httpd.conf` should be followed by a refresh to the system service with the command:
+
+```{r}
+sudo systemctl restart httpd.service
+```
+
+#### starrnotes
+
+### ssh
+
+Key files are created using the command `ssh-keygen` and are stored in a dot folder under the home directory. The arrangement of server keys should generally be in place for the server setup, but any new client machines would need to go through the process of generating and inserting keys to gain access, if necessary.
+
+keys should be stored in the swadm .ssh directory: `/home/swadm/.ssh/authorized_keys2`. This can be done by copy-pasting the public ssh key of the client machine at the bottom of this authorized key file on the server.
+
+* !! It is very important that keys are not put in the default `authorized_keys` file. This is wiped by automated OIT processes on a regular basis.
+* The correct permissions for the `authorized_keys2` file should be `chmod 600`.
+
+```{r}
+-rw-r--r-- 1 swadm swadm    0 Oct 31 19:08 authorized_keys
+-rw------- 1 swadm swadm 1464 Nov 26 20:47 authorized_keys2
+-rw------- 1 swadm swadm 1675 Dec  2 17:43 id_rsa
+-rw-r--r-- 1 swadm swadm  416 Dec  2 17:43 id_rsa.pub
+-rw-r--r-- 1 swadm swadm  407 Nov 26 23:08 known_hosts
+```
+
+
+### backup
+
+In addition to an archival process outside the project directory, the script `backup.sh` will push the contents of `/swadm/var/www/backup` to a separate server instance outside the ccgd server.
